; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_mevent.c_mevent_kq_flags.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_mevent.c_mevent_kq_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mevent = type { i32 }

@EV_ADD = common dso_local global i32 0, align 4
@EV_ENABLE = common dso_local global i32 0, align 4
@EV_DISABLE = common dso_local global i32 0, align 4
@EV_DELETE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mevent*)* @mevent_kq_flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mevent_kq_flags(%struct.mevent* %0) #0 {
  %2 = alloca %struct.mevent*, align 8
  %3 = alloca i32, align 4
  store %struct.mevent* %0, %struct.mevent** %2, align 8
  %4 = load %struct.mevent*, %struct.mevent** %2, align 8
  %5 = getelementptr inbounds %struct.mevent, %struct.mevent* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %15 [
    i32 131, label %7
    i32 128, label %9
    i32 129, label %11
    i32 130, label %13
  ]

7:                                                ; preds = %1
  %8 = load i32, i32* @EV_ADD, align 4
  store i32 %8, i32* %3, align 4
  br label %17

9:                                                ; preds = %1
  %10 = load i32, i32* @EV_ENABLE, align 4
  store i32 %10, i32* %3, align 4
  br label %17

11:                                               ; preds = %1
  %12 = load i32, i32* @EV_DISABLE, align 4
  store i32 %12, i32* %3, align 4
  br label %17

13:                                               ; preds = %1
  %14 = load i32, i32* @EV_DELETE, align 4
  store i32 %14, i32* %3, align 4
  br label %17

15:                                               ; preds = %1
  %16 = call i32 @assert(i32 0)
  br label %17

17:                                               ; preds = %15, %13, %11, %9, %7
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
